<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ImagePreview">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="20dp">

        <FrameLayout
            android:id="@+id/iv"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:id="@+id/progress"
            android:indeterminateTint="#000000"
            tools:targetApi="lollipop" />

    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/brightness"
            android:textColor="#000000"
            android:layout_marginRight="10dp"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginEnd="10dp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/progressNumber"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/ic_baseline_label_24"
                android:layout_gravity="center_horizontal"
                android:textColor="#FFFFFF"
                android:text="@string/zero"
                android:textAlignment="center"
                android:textSize="13sp"
                app:tint="#808080" />
    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:thumbTint="#000000"
        android:progress="10"
        android:progressTint="#000000"
        android:max="20"
        android:id="@+id/seek"
        tools:targetApi="lollipop" />

        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:id="@+id/uppertablayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_rotate_left_24"
            app:tint="#000000"
            android:layout_margin="5dp"
            android:id="@+id/rleft"
            android:contentDescription="@string/rotate_anticlockwise"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_rotate_right_24"
            app:tint="#000000"
            android:layout_margin="5dp"
            android:id="@+id/rright"
            android:contentDescription="@string/rotate_clockwise"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_save_24"
            app:tint="#000000"
            android:layout_margin="5dp"
            android:id="@+id/save"
            android:contentDescription="@string/save_image"
            />
    </LinearLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tablayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:tabMode="fixed">
        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/original"/>
        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/grey" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/b_w" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/b_w2" />
        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ocr"/>

    </com.google.android.material.tabs.TabLayout>


</LinearLayout>